Tue Jul  6 12:28:43 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/Download.html:
          CIAO is also online available

Tue Jul  6 11:29:41 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Message_Queue_T.cpp:
        * ace/Service_Repository.h:
        * ace/Task_T.h:
          Fixed doxygen warnings

Tue Jul  6 11:22:08 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/ace.doxygen:
          Improved doxygen configuration

Tue Jul  6 11:11:06 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/ace.doxygen:
        * etc/ace_man.doxygen:
        * etc/ace_qos.doxygen:
        * etc/ace_rmcast.doxygen:
        * etc/ace_ssl.doxygen:
        * etc/acexml.doxygen:
          Reduced the size of the colloboration graphs

Mon Jul  5 15:20:14 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao.spec:
          Removed some test code

Mon Jul  5 14:59:25 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao.spec:
          Added missing file, thanks to Anatoli Sakhnik
          <sakhnik at gmail dot com> for reporting this, this should fix
          bugzilla 3870

Mon Jul 05 14:32:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * bin/PerlACE/Process_Unix.pm:
          Fixes problem with killall() function being not selective enough.

Mon Jul  5 13:56:57 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/ace.doxygen:
        * etc/ace_qos.doxygen:
        * etc/ace_rmcast.doxygen:
        * etc/ace_ssl.doxygen:
        * etc/acexml.doxygen:
          Disable include and included graphs, this should reduce the size
          of the documentation a lot

Mon Jul  5 13:29:23 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_doxygen.pl:
          Some preparations to move the DAnCE doxygen files to DAnCE

        * docs/bczar/bczar.html:
          Updated release notes, made it possible to generate doxygen on