@@ -73,13 +73,11 @@
       while cutting a beta:
       <ol>
         <li>
-          The whole process takes somewhere between 8-9 hours, it now takes much longer 
-          than the original 2 hours for making the release itself where as generating the 
-          doxygen documentation now completes in around this 2-3 hours mark.</li>
+          The whole process takes somewhere between 3-4 hours.</li>
         <li>
-          I suggest you take advantage of GNU Screen so that even if your SSH session is 
-          interrupted, the cutting process can continue. This command is available on 
-          both of the two machines we use to cut the release.
+          We suggest you take advantage of GNU Screen so that even if your SSH session is
+          interrupted, the cutting process can continue. This command must be installed on
+          the machines we use to cut the release.
           <ul>
             <li>
               type <code>screen</code> to start screen.</li>
@@ -91,6 +89,11 @@
             <li>
               when finished, just type exit twice</li>
           </ul>
+          <li>
+            After login check that you can,
+            <br>
+            <code>ssh bczar@download.dre.vanderbilt.edu</code><br>
+            to ensure that this succeeds. If not fix the problem, if ok exit again back to
         <li>
           Prior to starting this, gather aggregate release notes from all developers. 
           This is usually in the form of an email plea asking to update all NEWS files in
@@ -131,13 +134,13 @@
           to fill the ChangeLog entry.</li>
         <ul>
           <li>
-            For example,<tt>export SIGNATURE="Chris Cleeland"</tt></li></ul>
+            For example,<tt>export SIGNATURE="Johnny Willemsen"</tt></li></ul>
         <li>
           Set an environment variable MAILID indicating your mail id. This is used to 
           fill the mail id portion of the ChangeLog entry.</li>
         <ul>
           <li>
-            For example,<tt>export MAILID="cleeland@ociweb.com"</tt></li></ul>
+            For example,<tt>export MAILID="jwillemsen@remedy.nl"</tt></li></ul>
         <li>
           Change directories to <tt>$DOC_ROOT</tt>
         </li>
@@ -149,6 +152,8 @@
           documentation in parallel. NOTE that <code>--beta</code> should be replaced 
           with <code>--minor</code> or <code>--major</code> as appropriate.</li>
         <br>
+        After the repository has been tagged check each file listed below to make
+        sure version numbers are updated as expected.<br>
         <br>
         In the <em>EXTREMELY</em> unlikely event that something goes wrong during the <em>
           tagging</em> of the repo, the following files must be returned to the state 
@@ -196,7 +201,7 @@
       <li>
         Create the kits by executing<br>
         <code>ACE/bin/make_release.py --kit</code><br>
-        This will take somewhere arround 4-8 hours to complete.
+        This will take somewhere arround 2-4 hours to complete.
         <ul>
           <li>
             These commands only tags and creates the kits for the software itself, not 
@@ -240,14 +245,14 @@
         documentation in parrellel with the kit generation above.<br>
         <ul>
           <li>
-            Login to your release system you prepared with the same packages as above:<br>
+            Login to a release system you prepared with the same packages as above:<br>
             <code>screen</code></li>
           <li>
             After login check that you can,
             <br>
             <code>ssh bczar@download.dre.vanderbilt.edu</code><br>
             to ensure that this succeeds. If not fix the problem, if ok exit again back to 
-            your releas system. </li>
+            your release system. </li>
           <li>
             <code>cd /tmp</code><br>
             and remove the contents of the doxygen directory and recreate it again with</li><br>
@@ -269,9 +274,11 @@
               svn co svn://svn.dre.vanderbilt.edu/DOC/Middleware/tags/ACE+TAO+CIAO-X_Y_Z/CIAO 
               ACE_wrappers/TAO/CIAO </code>
           </li>
+          <li>Change to the ACE_wrappers directory using <br>
+          cd ACE_wrappers</li>
           <li>
             Set the needed environment variables using<br>
-            <code>export ACE_ROOT=/tmp/doxygen/ACE_wrappers</code></li>
+            <code>export ACE_ROOT=$PWD</code></li>
           <li>
             Check the doxygen version at the shell by executing the command:<br>
             <code>doxygen --version</code>
@@ -385,7 +392,7 @@
         Remove the directory tmp -<br><code>rm -rf tmp</code></lib>
       </ul><br>
       <li>
-        Back on <b>anduril.dre.vanderbilt.edu</b> where the kit was being generated and once <b>BOTH</b> the kit
+        On <b>anduril.dre.vanderbilt.edu</b> where the kit was being generated and once <b>BOTH</b> the kit
         and doxygen generation have finished their work, you should also move the packages to the
         previous versions directory with the appropriate decorators.
         <ul>
