@@ -1,3 +1,8 @@
+Wed Jul  7 11:43:16 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * docs/bczar/bczar.html:
+          Extended instructions
+
 Tue Jul  6 12:28:43 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * docs/Download.html:
